--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,11 +2,12 @@
 @import "./header";
 @import "./variables";
 @import "./base";
-@import "./whoWeAre";
+@import "./aboutus";
 @import "./products";
 @import "./contact";
 @import "./news";
 @import "./footer";
+@import "./back-to-top";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
