--- a/src/scss/_aboutus.scss
+++ b/src/scss/_aboutus.scss
@@ -1,10 +1,10 @@
 @import './variables';
+@import './Mixins/mixins';
 
-
-#whoWeAre {
+.about-us {
     padding: 60px 0 60px 0;
 
-    #aboutus {
+    &__text {
         width: 805px;
         margin: 30px auto;
         line-height: 30px;
@@ -15,9 +15,9 @@
         text-align: justify;
     }
 
-    .baseButton {
+    &__button {
+        @include button;
         margin: auto;
         margin-top: 40px;
     }
-
 }
