--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,72 +1,72 @@
 @import './variables';
 
-footer {
+.footer {
     background-color: #e5e5e5;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
 
-    .linksFoot {
+    &__container {
         display: flex;
+    }
 
-        .footerLinks {
-            padding-top: 40px;
-            margin-left: 261px;
-            color: #7b7b7b;
-            display: flex;
-            list-style: none;
+    &__links {
+        padding-top: 40px;
+        margin-left: 261px;
+        color: #7b7b7b;
+        display: flex;
+        list-style: none;
 
-            a {
-                display: block;
-                color: inherit;
-                text-decoration: none;
-            }
+        a {
+            display: block;
+            color: inherit;
+            text-decoration: none;
+        }
 
-            li {
-                padding-right: 30px;
-                position: relative;
-            }
+        li {
+            padding-right: 30px;
+            position: relative;
 
-            li:nth-child(2):hover,
-            li:nth-child(3):hover {
+            &:nth-child(2):hover,
+            &:nth-child(3):hover {
                 color: #3d3d3d;
-            }
-
-            .withLine::after {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 0;
-                left: calc(100% - 15px);
-                background-color: #7b7b7b;
-                width: 1px;
-                height: 23px;
             }
         }
 
-        .socialMedia {
-            padding-top: 37px;
-            display: flex;
-            width: 170px;
-            justify-content: space-between;
-            margin-left: auto;
-            margin-right: 261px;
-
-            img {
-                height: 30px;
-                width: 30px;
-            }
-
+        .with-line::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: calc(100% - 15px);
+            background-color: #7b7b7b;
+            width: 1px;
+            height: 23px;
         }
     }
 
-    .contactFoot {
+    &__social {
+        padding-top: 37px;
+        display: flex;
+        width: 170px;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: 261px;
+
+        img {
+            height: 30px;
+            width: 30px;
+        }
+
+    }
+
+    &__contact {
         margin: 50px 261px 0 261px;
         display: flex;
         justify-content: space-between;
 
-        .text {
+        &__text {
             color: #3d3d3d;
             font-size: 15px;
             text-align: right;
