--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -1,12 +1,13 @@
 @import './variables';
+@import './Mixins/mixins';
 
-#slider {
+.slider {
     position: relative;
     overflow: hidden;
     z-index: 0;
 
-    a.control_prev,
-    a.control_next {
+    &__control--prev,
+    &__control--next {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
@@ -21,20 +22,51 @@
         font-size: 18px;
         opacity: 0.8;
         cursor: pointer;
+
+        &:hover{
+            -webkit-transition: all 0.2s ease;
+        }
     }
 
-    a.control_prev:hover,
-    a.control_next:hover {
-        -webkit-transition: all 0.2s ease;
-    }
-
-    a.control_prev {
+    &__control--prev {
         border-radius: 0 2px 2px 0;
     }
 
-    a.control_next {
+    &__control--next {
         right: 0;
         border-radius: 2px 0 0 2px;
+    }
+
+    &__container {
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 40vw; /* to change */
+        position: relative;
+        top: 50%;
+        transform: translate(0, -40%);
+        left: 25%;
+        color: white;
+
+        &__title {
+            text-transform: uppercase;
+            font-size: 40px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
+        }
+
+        &__text {
+            margin: 40px 0;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 35px;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        &__button { 
+            @include button;
+        }
     }
 
     ul {
@@ -53,34 +85,7 @@
             width: 100vw;
             height: 650px;
             background: #ccc;
-
-            .sliderContainer {
-                margin-top: 30px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                width: 661px; /* to change */
-                position: relative;
-                top: 50%;
-                transform: translate(0, -40%);
-                left: 25%;
-                color: white;
-
-                .sliderTitle {
-                    text-transform: uppercase;
-                    font-size: 40px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
-                }
-
-                .sliderText {
-                    margin: 40px 0;
-                    font-size: 18px;
-                    font-weight: 500;
-                    line-height: 35px;
-                    font-family: 'Montserrat', sans-serif;
-                }
-            }
         }
     }
 }
+    
