--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,13 @@
 @import "./back-to-top";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
+/* glide.js */
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
+
+/* fixes */
+@import './Fix/fix';
+
 html {
     color: #2a2a2a;
     scroll-behavior: smooth;
