--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -6,6 +6,7 @@
     
     &__slide{
         height: 650px;
+        background-position: center;
     }
 }
 
@@ -95,3 +96,4 @@
         transform: scale(1.4);
     }
 }
+
