--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,5 @@
 @import './variables';
 
-
 .header {
     display: flex;
     margin-top: 32px;
@@ -15,9 +14,9 @@
         height: 62px;
         width: 20%;
         background-color: $base-color;
-        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+        box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
     }
 
     &__logo {
@@ -32,15 +31,15 @@
         height: 62px;
         width: 100%;
 
-        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+        box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
     }
-    
+
     &__links {
         background-color: $base-color;
-        margin-left: 22%;
-        margin-right: 22%;
+        margin-left: 15%;
+        margin-right: 20%;
         align-items: center;
         width: 100%;
         display: flex;
@@ -48,12 +47,13 @@
         list-style: none;
         flex-wrap: wrap;
 
-        a {
+        &__link {
             font-size: 13px;
             font-weight: 600;
             display: flex;
             height: 62px;
-            padding: 0 1vw 0 1vw;
+            width: 20%;
+            padding: 0 1vw;
             justify-content: center;
             align-items: center;
             background-color: $base-color;
@@ -61,15 +61,60 @@
             text-decoration: none;
             color: white;
             font-family: 'Montserrat';
-
             &:hover {
                 background-image: linear-gradient($base-color, $gradient);
             }
-
             @media screen and (min-width: 1000px) and (max-width: 1690px) {
-                padding: 0 1vw 0 1vw;
+                padding: 0 1vw;
             }
         }
+
+        &__dropdown {
+            position: relative;
+            &:hover .header__links__dropdown__dropdown-content {
+                display: block;
+            }
+
+            &__dropbtn {
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+            &__dropdown-content {
+                width: 100%;
+                position: absolute;
+                display: none;
+                top: 100%;
+                background-color: #f9f9f9;
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+                z-index: 1;
+
+
+                &:hover {
+                    display: block;
+                }
+
+                a {
+                    color: black;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    //border-bottom: 1px lightgray solid;
+                    /* to discuss */
+                    text-align: left;
+                }
+                
+                a:hover {
+                    background-color: #f1f1f1;
+                }
+            }
+        }
+
+        &__contact{
+            /* make contact button unique */
+        }
+
     }
 }
-
