--- a/src/scss/_aboutus.scss
+++ b/src/scss/_aboutus.scss
@@ -5,7 +5,7 @@
     padding: 60px 0 60px 0;
 
     &__text {
-        width: 805px;
+        width: 43%;
         margin: 30px auto;
         line-height: 30px;
         font-family: 'Montserrat', sans-serif;
