--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -78,7 +78,6 @@
             &__dropbtn {
                 color: white;
                 text-align: center;
-                padding: 14px 16px;
                 text-decoration: none;
             }
 
@@ -87,10 +86,9 @@
                 position: absolute;
                 display: none;
                 top: 100%;
-                background-color: #f9f9f9;
+                background-color: white;
                 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
                 z-index: 1;
-
 
                 &:hover {
                     display: block;
@@ -98,10 +96,10 @@
 
                 a {
                     color: black;
-                    padding: 12px 16px;
+                    padding: 20px 16px;
                     text-decoration: none;
                     display: block;
-                    //border-bottom: 1px lightgray solid;
+                    border-bottom: 1px lightgray solid;
                     /* to discuss */
                     text-align: left;
                 }
@@ -113,6 +111,14 @@
         }
 
         &__contact{
+            
+            /*
+            background-color: white;
+            color: black;
+            height: 45px;
+            border-radius: 10px;
+            */
+
             /* make contact button unique */
         }
 
