--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -8,14 +8,15 @@
     padding: 60px 0 60px 0;
 
     &__options {
+        padding: 0;
         display: flex;
-        flex-direction: row;
-        margin: 40px auto 13px;
-        width: 680px;
+        justify-content: center;
+        margin: 30px auto 0 auto;
+        width: 40%;
         height: 40px;
 
         &__unit {
-            color: #696969;
+            color: #b1b1b1;
             font-family: 'Montserrat', sans-serif;
             font-weight: 600;
             font-size: 17px;
@@ -23,7 +24,7 @@
             justify-content: center;
             align-items: center;
             border-bottom: 2px solid #d5d5d5;
-            width: calc(680px / 3);
+            width: calc(100% / 3);
             transition: 0.3s;
             cursor: pointer;
 
@@ -41,11 +42,20 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 330px;
-        width: 770px;
-        filter: drop-shadow(2px 2px 1px gray);
+        border-radius: 10px;
+        width: 40%;
+        -webkit-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
+        -moz-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
+        box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
         background-color: white;
-        margin: 5px auto;
+        margin: 30px auto 5px auto;
+        padding: 30px;
+
+        &__flex {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
         &__info {
             display: flex;
@@ -56,7 +66,7 @@
         
         &__photo {
             width: 160px;
-            height: 190px;
+            min-width: 160px;
         }
 
         &__description {
@@ -65,16 +75,15 @@
             font-weight: 400;
             font-size: 15px;
             line-height: 24px;
-            margin-left: 30px;
-            width: 490px;
-            height: 190px;
             text-align: justify;
+            margin: 20px;
+            width: 65%;
         }
         
     }
 
     &__button {
         @include button;
-        margin-top: 35px;
+        margin-top: 25px;
     }
 }
