--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -7,6 +7,8 @@
     &__slide{
         height: 650px;
         background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 
