feat(rwd): front-page made responsive using include-media

--- a/src/scss/Fix/_fix.scss
+++ b/src/scss/Fix/_fix.scss
@@ -42,6 +42,10 @@
     &--disabled {
       opacity: 0.33;
     }
+
+    @include media("<=tablet"){
+      display: none !important;
+    }
 }
 
 .glide__arrow img{
