--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,8 @@
 @import './variables';
+@import './Lib/include-media';
 
 .footer {
+    position: relative;
     background-color: #1a1a1a;
     overflow: hidden;
     display: flex;
@@ -11,19 +13,45 @@
         align-items: center;
         justify-content: space-between;
         padding: 15px 0;
-        margin: 0 15% 0 15%;
+        margin: 0 15%;
+
+        @include media("<=desktop"){
+            margin: 0 10%;
+        }
+
+        @include media("<=bg-tablet"){
+            flex-direction: column;
+            padding-bottom: 70px;
+        }
     }
 
-    &__logo{
-        
+    &__logo img{
+        width: 150px;
+
+        @include media("<=sm-desktop"){
+            width: 130px
+        }
+
+        @include media("<=bg-tablet"){
+            margin: 20px;
+        }
     }
 
     &__links {
-        width: 40%;
+        width: 550px;
         color: white;
         display: flex;
         list-style: none;
         justify-content: space-around;
+
+        @include media("<=sm-desktop"){
+            width: 470px;
+        }
+
+        @include media("<=bg-tablet"){
+            position: absolute;
+            bottom: 20px;
+        }
 
         a {
             display: block;
@@ -33,10 +61,13 @@
 
         li {
             position: relative;
-
             &:nth-child(2):hover,
             &:nth-child(3):hover {
                 color: #3d3d3d;
+            }
+
+            @include media("<=sm-desktop"){
+                font-size: 14px;
             }
         }
 
@@ -46,7 +77,7 @@
             position: absolute;
             top: 0;
             left: calc(100% + 15px);
-            background-color: #7b7b7b;
+            background-color: white;
             width: 1px;
             height: 23px;
         }
@@ -54,17 +85,24 @@
 
     &__social {
         display: flex;
-        width: 10%;
+        width: 150px;
         justify-content: space-between;
 
+        @include media(">bg-tablet", "<=sm-desktop"){
+            width: 120px;
+        }
+
         img {
-            height: 30px;
             width: 30px;
+
+            @include media(">bg-tablet", "<=sm-desktop"){
+                width: 25px;
+            }
         }
     }
 
     &__contact {
-        margin: 50px 15% 0 15%;
+        margin: 50px 15% 0;
         display: flex;
         justify-content: space-between;
 
@@ -82,10 +120,19 @@
                 margin-bottom: -10px;
             }
         }
+
+        @include media("<=desktop"){
+            margin: 50px 10% 0;
+        }
     }
 
-    &__overlay{
+    &__overlay {
         background-color: $gradient;
         padding-bottom: 30px;
+
+        @include media("<=sm-desktop"){
+            display: none;
+        }
+        
     }
 }
