--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -11,9 +11,9 @@
 
     &__posts {
         margin: 24px 0 60px;
-        font-size: 14px;
+        font-size: 15px;
         color: $base-color;
-        font-weight: 500;
+        font-weight: 600;
         text-align: center;
 
         a {
@@ -24,19 +24,22 @@
     }
 
     &__container {
+        margin: 0 60px;
         display: flex;
-        width: 990px;
-        height: 460px;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: center;
 
         &__row1 {
             flex-basis: 49%;
             display: flex;
             flex-direction: column;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-bottom: 10px solid transparent;
+
 
             .first {
                 flex-basis: 50%;
-                padding-top: 25px;
             }
         }
 
@@ -49,17 +52,24 @@
             flex-basis: 49%;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            width: 500px;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
 
             .second {
                 flex-basis: 49%;
+                margin-bottom: 5px;
+
             }
 
             .third {
                 flex-basis: 49%;
+                margin-top: 5px;
+
             }
         }
     }
+
     &:after {
         content: "";
         background-color: #d0d0d0;
@@ -70,11 +80,12 @@
 
     &__block {
         background-color: white;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         padding: 18px 50px;
         display: flex;
         flex-direction: column;
         transition: 0.2s;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        min-width: 400px;
 
         //  cursor: pointer;
         span {
@@ -103,7 +114,6 @@
             color: #AB0039;
             font-weight: bold;
             cursor: pointer;
-            margin-right: 280px;
 
         }
     }
