--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -1,5 +1,6 @@
 @import './Mixins/mixins';
 @import './variables';
+@import './Lib/include-media';
 
 .hero-slider {
     position: relative;
@@ -9,15 +10,19 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+
+        @include media("<=tablet"){
+            height: 100vh;
+        }
     }
 }
 
 .slider__container {
-    margin-top: 30px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 40vw; /* to change */
+    width: 700px; /* to change */
     white-space: normal;
     position: relative;
     top: 50%;
@@ -25,11 +30,27 @@
     left: 25%;
     color: white;
 
+    @include media("<=desktop"){
+        width: 50%;
+    }
+
+    @include media("<=tablet"){
+        margin-top: 0px;
+    }
+
     &__title {
         text-transform: uppercase;
         font-size: 40px;
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
+
+        @include media("<=desktop"){
+            font-size: 37px;
+        }
+
+        @include media("<=tablet"){
+            font-size: 35px;
+        }
     }
 
     &__text {
@@ -38,6 +59,17 @@
         font-weight: 500;
         line-height: 35px;
         font-family: 'Montserrat', sans-serif;
+        text-align: justify;
+
+        @include media("<=desktop"){
+            font-size: 15px;
+            line-height: 30px;
+        }
+
+        @include media("<=tablet"){
+            font-size: 13px;
+            line-height: 30px;
+        }
     }
 
     &__button { 
@@ -54,6 +86,7 @@
     margin: 0;
     text-align: center;
     top: 15px;
+
     @mixin atMedium {
         top: 50px;
     }
@@ -69,7 +102,8 @@
     padding: 0;
     margin: 0;
     text-align: center;
-    bottom: 15px;
+    bottom: 3em !important; 
+    
     @mixin atMedium {
         top: 50px;
     }
