fix(index.html): trying to avoid div hell, changing into another tags

--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -114,7 +114,10 @@
             color: #AB0039;
             font-weight: bold;
             cursor: pointer;
-
+            background-color: transparent;
+            border: none;
+            text-align: left;
+            font-family: Montserrat;
         }
     }
 }
