--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -83,6 +83,7 @@
             height: 62px;
             width: 20%;
             padding: 0 1vw;
+            border: none;
             justify-content: center;
             align-items: center;
             background-color: $base-color;
