feat(page.html): added a universal page design

--- a/src/scss/Modules/_contact.scss
+++ b/src/scss/Modules/_contact.scss
@@ -1,6 +1,6 @@
-@import './variables';
-@import './Mixins/mixins';
-@import './Lib/include-media';
+@import '../Base/variables';
+@import '../Mixins/mixins';
+@import '../Lib/include-media';
 
 .contact {
 	padding: 60px 0 60px 0;
