--- a/src/scss/Modules/_products.scss
+++ b/src/scss/Modules/_products.scss
@@ -1,6 +1,6 @@
-@import './variables';
-@import './Mixins/mixins';
-@import './Lib/include-media';
+@import '../Base/variables';
+@import '../Mixins/mixins';
+@import '../Lib/include-media';
 
 .products {
     background-color: #e5e5e5;
