--- a/src/scss/Modules/_slider.scss
+++ b/src/scss/Modules/_slider.scss
@@ -1,17 +1,16 @@
-@import './Mixins/mixins';
-@import './variables';
-@import './Lib/include-media';
+@import '../Mixins/mixins';
+@import '../Base/variables';
+@import '../Lib/include-media';
 
 .hero-slider {
     position: relative;
-    
-    &__slide{
+
+    &__slide {
         height: 650px;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-
-        @include media("<=tablet"){
+        @include media("<=tablet") {
             height: 100vh;
         }
     }
@@ -22,21 +21,20 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 700px; /* to change */
+    width: 700px;
+    /* to change */
     white-space: normal;
     position: relative;
     top: 50%;
     transform: translate(0, -40%);
     left: 25%;
     color: white;
-
-    @include media("<=desktop"){
+    @include media("<=desktop") {
         width: 60%;
         left: 20%;
     }
-
-    @include media("<=tablet"){
-        margin-top: 0px;
+    @include media("<=tablet") {
+        margin-top: 0;
     }
 
     &__title {
@@ -44,12 +42,10 @@
         font-size: 40px;
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
-
-        @include media("<=desktop"){
+        @include media("<=desktop") {
             font-size: 37px;
         }
-
-        @include media("<=tablet"){
+        @include media("<=tablet") {
             font-size: 35px;
         }
     }
@@ -61,16 +57,14 @@
         line-height: 35px;
         font-family: 'Montserrat', sans-serif;
         text-align: justify;
-
-        @include media("<=desktop"){
+        @include media("<=desktop") {
             font-size: 15px;
             line-height: 30px;
         }
 
-       
     }
 
-    &__button { 
+    &__button {
         @include button;
     }
 }
@@ -84,12 +78,10 @@
     margin: 0;
     text-align: center;
     top: 15px;
-
     @mixin atMedium {
         top: 50px;
     }
 }
-
 
 /* GlideJS */
 .glide__bullets {
@@ -100,8 +92,7 @@
     padding: 0;
     margin: 0;
     text-align: center;
-    bottom: 3em !important; 
-    
+    bottom: 3em !important;
     @mixin atMedium {
         top: 50px;
     }
@@ -109,7 +100,7 @@
     button {
         display: inline-block;
         text-indent: -9999px;
-        border-radius: 0%;
+        border-radius: 0;
         font-size: 0;
         line-height: 0;
         width: 8px;
@@ -122,7 +113,7 @@
         outline: none;
         transition: background-color 0.3s ease-out;
         cursor: pointer;
-        
+
     }
 
     button.glide__bullet--active {
@@ -130,4 +121,3 @@
         transform: scale(1.4);
     }
 }
-
