--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,20 @@
-@import "./slider";
-@import "./navbar";
-@import "./variables";
-@import "./base";
-@import "./aboutus";
-@import "./products";
-@import "./contact";
-@import "./news";
-@import "./footer";
-@import "./back-to-top";
+@import "./Modules/slider";
+@import "./Modules/navbar";
+@import "./Base/variables";
+@import "./Base/base";
+@import "./Modules/aboutus";
+@import "./Modules/products";
+@import "./Modules/contact";
+@import "./Modules/news";
+@import "./Modules/footer";
+@import "./Modules/back-to-top";
+//@import "./Modules/page";
+@import "./Modules/page-banner";
+@import "./Modules/page-links";
+@import "./Base/container";
+@import "./Modules/page-section";
+@import "./Modules/generic-content";
+
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 /* glide.js */
