--- a/src/scss/Modules/_page-links.scss
+++ b/src/scss/Modules/_page-links.scss
@@ -52,7 +52,7 @@
         text-align: center;
         padding: 17px 10px;
         text-decoration: none;
-        color: $base-color;
+        color: black;
         transition: all 0.3s;
     }
     li a:hover {
