--- a/src/scss/Modules/_footer.scss
+++ b/src/scss/Modules/_footer.scss
@@ -53,6 +53,10 @@
             bottom: 20px;
         }
 
+        @include media("<=tablet"){
+            width: 420px;
+        }
+
         a {
             display: block;
             color: inherit;
@@ -68,6 +72,10 @@
 
             @include media("<=sm-desktop"){
                 font-size: 14px;
+            }
+
+            @include media("<=tablet"){
+                font-size: 12px;
             }
         }
 
@@ -93,26 +101,32 @@
             width: 120px;
         }
 
-        img {
-            width: 25px;
+        .fab{
+            color: white;
+            transform: scale(1.5);
 
-            @include media(">bg-tablet", "<=sm-desktop"){
-                width: 20px;
+            &:hover{
+                color: $base-color;
+            }
+
+            @include media("<=sm-desktop"){
+                transform: scale(1.3);
             }
         }
     }
 
     &__contact {
-        margin: 50px 15% 0;
+        margin: 30px 15% 0;
         display: flex;
         justify-content: space-between;
 
         &__text {
-            color: white;
+            color: #323232;
             font-size: 15px;
             text-align: center;
             font-family: Montserrat;
-            font-weight: 300;
+            font-weight: 400;
+            line-height: 22px;
 
             &:first-of-type{
                 text-align: left;
@@ -136,7 +150,7 @@
     }
 
     &__overlay {
-        background-color: $gradient;
+        background-color: white;
         padding-bottom: 30px;
 
         @include media("<=sm-desktop"){
@@ -145,3 +159,5 @@
         
     }
 }
+
+
