--- a/src/scss/Modules/_products.scss
+++ b/src/scss/Modules/_products.scss
@@ -51,7 +51,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 10px;
-        width: 750px;
+        width: 900px;
         -webkit-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
         box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
@@ -60,7 +60,9 @@
         padding: 30px;
 
         @include media("<=bg-tablet"){
-            width: 70%;
+            width: 80%;
+            padding-left: 0px;
+            padding-right: 0px;
         }
 
         &__flex {
@@ -84,9 +86,11 @@
         &__description {
             color: #696969;
             font-family: 'Montserrat', sans-serif;
-            font-weight: 400;
+            line-height: 30px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
+            color: #7D7D7D;
             font-size: 15px;
-            line-height: 24px;
             text-align: justify;
             margin: 20px;
             width: 65%;
