--- a/src/scss/Base/_base.scss
+++ b/src/scss/Base/_base.scss
@@ -14,5 +14,10 @@ a {
 	color: #3d3d3d;
 	font-size: 34px;
 	text-align: center;
+	
+	@include media("<=tablet"){
+		font-size: 30px;
+		padding: 0 30px;
+	}
 }
 
