--- a/src/scss/Modules/_contact.scss
+++ b/src/scss/Modules/_contact.scss
@@ -6,14 +6,24 @@
 	background-color: $base-color;
 	display: flex;
 	justify-content: space-around;
-	align-items: flex-start;
+	align-items: center;
 	padding: 50px 15%;
 
+	@include media("<=sm-desktop"){
+		flex-flow: column;
+	}
+
 	&__stats {
+		flex-basis: 50%;
 		display: flex;
 		flex-flow: column;
 		justify-content: flex-start;
-		height: 100%;
+		align-items: center;
+		margin-right: 20px;
+
+		@include media("<=sm-desktop"){
+			margin-right: 0;
+		}
 
 		.section-title{
 			color: white;
@@ -22,10 +32,14 @@
 		&__numbers{
 			display: flex;
 			margin: 30px 0;
-			width: 500px;
+			width: 100%;
 			border: 1px solid white;
 			border-radius: 30px;
 			height: 150px;
+
+			@include media("<=tablet"){
+				width: 80vw;
+			}
 
 			.stat-item{
 				flex-basis: 35%;
@@ -40,6 +54,9 @@
 
 				.stat-num{
 					font-size: 70px;
+					@include media("<=tablet"){
+						font-size: 60px;
+					}
 				}
 
 				.stat-desc{
@@ -60,6 +77,9 @@
 
 				.stat-num{
 					font-size: 70px;
+					@include media("<=tablet"){
+						font-size: 60px;
+					}
 				}
 
 				.stat-desc{
@@ -71,7 +91,13 @@
 		}
 
 		&__companies{
-			margin-top: 70px;
+			width: 90%;
+			margin-top: 120px;
+
+			@include media("<=sm-desktop"){
+				margin-top: 30px;
+			}
+
 			.companies__title{
 				color: white;
 				font-family: Montserrat;
@@ -80,6 +106,35 @@
 				line-height: 20px;
 				text-align: center;
 			}
+
+			.companies__logos{
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				margin-top: 70px;
+				text-align: center;
+
+				@include media("<=sm-desktop"){
+					margin-top: 30px;
+					margin-bottom: 30px;
+				}
+
+				.logo{
+					height: 2vw;
+
+					@include media("<=sm-desktop"){
+						height: 30px;
+					}
+
+					@include media("<=tablet"){
+						height: 20px;
+					}
+				}
+			}
+		}
+
+		@include media("<=sm-desktop"){
+			width: 80%;
 		}
 
 	}
@@ -94,7 +149,7 @@
 		border-radius: 30px;
 
 		@include media("<=tablet"){
-            width: 80%;
+            width: 80vw;
         }
 
 		&__text {
