--- a/src/scss/Modules/_news.scss
+++ b/src/scss/Modules/_news.scss
@@ -1,13 +1,15 @@
 @import '../Base/variables';
+@import '../Lib/include-media';
 
 .news {
     font-family: 'Montserrat';
     background-color: #e5e5e5;
-    padding-top: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 15%;
+    padding-top: 60px;
 
     &__posts {
         margin: 24px 0 60px;
@@ -24,12 +26,15 @@
     }
 
     &__container {
-        margin: 0 60px;
         display: flex;
-        flex-wrap: wrap;
         justify-content: center;
         margin-bottom: 80px;
+        width: 1000px;
 
+        @include media("<=sm-desktop"){
+            width: 80vw;
+            flex-direction: column;
+        }
 
         &__featured-post {
             flex-basis: 49%;
@@ -41,14 +46,14 @@
         }
 
         &__photo {
-            width: 100%;
+            height: 60%;
+            object-fit: cover;
         }
 
         &__row2 {
             flex-basis: 49%;
             display: flex;
             flex-direction: column;
-            width: 500px;
             border-left: 5px solid transparent;
             border-right: 5px solid transparent;
             border-bottom: 20px solid transparent;
@@ -61,51 +66,41 @@
             .third {
                 flex-basis: 49%;
                 margin-top: 10px;
-
             }
         }
     }
 
     &__block {
-        position: relative;
         background-color: white;
         padding: 18px 50px;
         display: flex;
         flex-direction: column;
         transition: 0.2s;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-        min-width: 400px;
-        overflow: hidden;
-        //  cursor: pointer;
 
-        &:hover > span{
-	        animation: slide-out-top-in 0.2s linear forwards;
-        }
+        //  cursor: pointer;
         span {
-            font-size: 13px;
+            font-size: 9px;
             color: #D0D0D0;
             font-weight: bold;
-            animation: slide-out-top-out 0.2s linear forwards;
         }
 
         &__title {
             font-size: 28px;
             color: #3d3d3d;
             padding-top: 10px;
-            font-weight: 600;
+            font-weight: bold;
         }
 
         &__desc {
             font-size: 15px;
             padding-top: 15px;
-            line-height: 25px;
+            padding-bottom: 55px;
             color: #3d3d3d;
             opacity: 0.67;
         }
 
         &__button {
-            position: absolute;
-            bottom: -5px;
             font-size: 12px;
             color: #AB0039;
             font-weight: bold;
@@ -123,32 +118,3 @@
     background-color: lightgray;
 }
 */
-
-
-@keyframes slide-out-top-in{
-    0% {
-        -webkit-transform: translateY(0);
-                transform: translateY(0);
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translateY(-20px);
-                transform: translateY(-20px);
-        opacity: 0;
-    }
-}
-
-@keyframes slide-out-top-out{
-    0% {
-        -webkit-transform: translateY(-20px);
-                transform: translateY(-20px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: translateY(0);
-                transform: translateY(0);
-        opacity: 1;
-    }
-}
