--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./Base/container";
 @import "./Modules/page-section";
 @import "./Modules/generic-content";
+@import "./Modules/hamburger-menu";
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
