add(ham-navbar): added first version of a functional hamburger navbar

--- a/src/scss/Modules/_navbar.scss
+++ b/src/scss/Modules/_navbar.scss
@@ -136,7 +136,7 @@
     }
 }
 
-.arrow {
+.arrow-down {
     border: solid white;
     border-width: 0 3px 3px 0;
     display: inline-block;
@@ -144,4 +144,14 @@
     margin: 0 0 2px 5px;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
+}
+
+.arrow-right {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin: 0 0 2px 5px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
 }
