--- a/src/scss/Modules/_hamburger-menu.scss
+++ b/src/scss/Modules/_hamburger-menu.scss
@@ -1,15 +1,91 @@
 @import "../Base/variables";
 @import "../Lib/include-media";
 
-.hamburger{
+.hamburger {
     height: 30px;
     width: 30px;
     position: absolute;
     right: 20px;
     display: none;
-
-    @include media("<=bg-tablet"){
+    @include media("<=bg-tablet") {
         display: block;
     }
 }
 
+.ham-navbar {
+    position: absolute;
+    background-color: black;
+    z-index: 100;
+    height: 100vh;
+    width: 100vw;
+    color: white;
+    font-family: Montserrat;
+    transform: translateX(-100%);
+    transition: 0.3s;
+
+    &__bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 80px;
+        background-color: #323232;
+        width: 100%;
+        padding: 0 40px;
+
+        img {
+            height: 60px;
+        }
+
+        i {
+            font-size: 30px;
+        }
+    }
+
+    &__links {
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+        height: 100%;
+
+        a {
+            color: white;
+
+            li {
+                font-size: 18px;
+                justify-content: space-between;
+                font-weight: 500;
+                display: flex;
+                align-items: center;
+                padding: 17px 40px;
+            }
+        }
+
+        &__cta {
+            position: absolute;
+            height: 80px;
+            width: 100%;
+            background-color: #323232;
+            bottom: 0;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            button {
+                font-family: Montserrat;
+                font-size: 20px;
+                font-weight: 600;
+                background-color: $base-color;
+                width: 90%;
+                height: 70%;
+                border: none;
+                color: white;
+            }
+        }
+    }
+
+}
+
+.ham-active {
+    transform: translateX(0%);
+}
