--- a/src/scss/Modules/_news.scss
+++ b/src/scss/Modules/_news.scss
@@ -8,15 +8,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 15%;
-    padding-top: 60px;
+    padding: 60px 15% 0;
 
-    &__posts {
+    &__more {
         margin: 24px 0 60px;
         font-size: 15px;
         color: $base-color;
         font-weight: 600;
         text-align: center;
+        transition: 0.2s;
+        &:hover {
+            transform: translateX(3px);
+        }
 
         a {
             display: block;
@@ -29,9 +32,8 @@
         display: flex;
         justify-content: center;
         margin-bottom: 80px;
-        width: 1000px;
-
-        @include media("<=sm-desktop"){
+        width: 1200px;
+        @include media("<=desktop") {
             width: 80vw;
             flex-direction: column;
         }
@@ -43,13 +45,12 @@
             border-left: 5px solid transparent;
             border-right: 5px solid transparent;
             border-bottom: 20px solid transparent;
-            
-            .first{
+
+            .first {
                 flex-basis: 50%;
             }
         }
 
-        
         &__photo {
             flex-basis: 55%;
             object-fit: cover;
@@ -114,6 +115,11 @@
             border: none;
             text-align: left;
             font-family: Montserrat;
+
+            transition: 0.2s;
+            &:hover {
+                transform: translateX(3px);
+            }
         }
     }
 }
