--- a/src/scss/Modules/_products.scss
+++ b/src/scss/Modules/_products.scss
@@ -5,17 +5,16 @@
 .products {
     background-color: #e5e5e5;
     height: 50%;
-    padding: 60px 0 60px 0;
+    padding: 60px 0;
 
     &__options {
         padding: 0;
         display: flex;
         justify-content: center;
-        margin: 30px auto 0 auto;
+        margin: 30px auto 0;
         width: 750px;
         height: 40px;
-
-        @include media("<=bg-tablet"){
+        @include media("<=bg-tablet") {
             width: 70%;
         }
 
@@ -32,37 +31,40 @@
             transition: 0.3s;
             cursor: pointer;
 
-            @include media("<=bg-tablet"){
+            &--active {
+                color: $base-color;
+                border-bottom: 2px solid $base-color;
+                cursor: pointer;
+            }
+            @include media("<=bg-tablet") {
                 font-size: 15px;
             }
 
         }
 
-        &__unit.active {
-            color: $base-color;
-            border-bottom: 2px solid $base-color;
-            cursor: pointer;
-        }
     }
 
     &__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border-radius: 10px;
-        width: 900px;
-        -webkit-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
-        -moz-box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
-        box-shadow: 0px 0px 8px -2px rgba(0,0,0,1);
-        background-color: white;
-        margin: 30px auto 5px auto;
-        padding: 30px;
+        display: none;
 
-        @include media("<=bg-tablet"){
+        &--active {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            width: 900px;
+            -webkit-box-shadow: 0 0 8px -2px rgba(0,0,0,1);
+            -moz-box-shadow: 0 0 8px -2px rgba(0,0,0,1);
+            box-shadow: 0 0 8px -2px rgba(0,0,0,1);
+            background-color: white;
+            margin: 30px auto 5px;
+            padding: 30px;
+        }
+        @include media("<=bg-tablet") {
             width: 80%;
-            padding-left: 0px;
-            padding-right: 0px;
+            padding-left: 0;
+            padding-right: 0;
         }
 
         &__flex {
@@ -77,7 +79,7 @@
             justify-content: center;
             align-items: center;
         }
-        
+
         &__photo {
             width: 180px;
             min-width: 160px;
@@ -94,12 +96,11 @@
             text-align: justify;
             margin: 20px;
             width: 65%;
-
-            @include media("<=bg-tablet"){
+            @include media("<=bg-tablet") {
                 width: 80%;
             }
         }
-        
+
     }
 
     &__button {
